--- a/lib/photobooth_web/templates/home/index.html.eex
+++ b/lib/photobooth_web/templates/home/index.html.eex
@@ -1,3 +1,3 @@
-<h2>Hello World</h2>
+<!-- <h2>Hello World</h2> -->
 
-<img src="camera_stream.mjpg" />
+<img id="stream" src="camera_stream.mjpg" />
