--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,24 @@
 /* This file is for your main application css. */
 
+body {
+    margin:  0px;
+    padding: 0px;
+}
+
 #stream {
-    width: 320px;
-    height: 240px;
+    width:  480px;
+    height: 360px;
+    margin: 60px 20px 60px 20px;
+    float:  left;
+}
+
+#controls {
+    width:    260px;
+    height:   480px;
+    padding:  60px 0px;
+    overflow: hidden;
+}
+
+#controls h1 {
+    margin: 0px;
 }
