--- a/lib/photobooth_web/templates/home/index.html.eex
+++ b/lib/photobooth_web/templates/home/index.html.eex
@@ -1,3 +1,5 @@
-<!-- <h2>Hello World</h2> -->
-
 <img id="stream" src="camera_stream.mjpg" />
+
+<div id="controls">
+    <h1>Photobooth</h1>
+</div>
