--- a/lib/photobooth_web/templates/home/index.html.eex
+++ b/lib/photobooth_web/templates/home/index.html.eex
@@ -2,4 +2,6 @@
 
 <div id="controls">
     <h1>Photobooth</h1>
+    <div id="counter">&nbsp;</div>
+    <button type="button" id="clicker">Snap Photo!</button>
 </div>
