--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -47,3 +47,9 @@ body {
     background-color: black;
     color:            white;
 }
+#controls #clicker:active {
+    color: #990000;
+}
+#controls #clicker:focus {
+    outline: 0px;
+}
